--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	</repositories>
 	<build>
 		<defaultGoal>clean install</defaultGoal>
-		<finalName>FroxyCore-${project.version}</finalName>
+		<finalName>Invest-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -97,12 +97,19 @@
 			<version>1.18.6</version>
 		</dependency>
 
-		<!--Spigot API -->
+		<!-- Spigot API -->
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
 			<version>1.12.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<!-- Gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 	</dependencies>
 </project>
