--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,6 @@ permissions:
   invest.info:
     default: op
     description: Show informations about an invest
+  invest.tp:
+    default: op
+    description: Teleport to the spawn of an invest
