--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.threshold=INFO
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.conversionPattern=[%p] %m
+log4j.appender.console.layout.conversionPattern=[Invest] [%p] %m
 
 
 ###############
