Add scheduler for investment

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -45,3 +45,4 @@ command:
     notInvest: "You don't have an invest"
     done: "Invest stopped"
 errorLoading: "An error has occured, please contact your administrator to fix it"
+end: "Your investment is complete, you got %s$"
