Save players each X seconds (to prevent crash)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,5 @@
 commandInvest: 
 # Show the "notInvest" message even if an invest has a __global__ region
 showInGlobal: true
+# Save all players each X seconds
+timeToSave: 1800
