--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,10 @@ showInGlobal: true
 timeToSave: 1800
 # Refund player when he stops his invest (in percent)
 refund-percent: 50
+# Set player on vanish if he is in his invest zone
+vanish: true
+# Set player on vanish if he is in his invest zone and the region is __global__
+vanish-global: false
 # Command executed when a player end his invest
 commands-end:
 - test
