--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: me.oddlyoko.invest.Invest
 version: 1.4
 author: 0ddlyoko
 depend: [WorldGuard, Vault]
+softdepend: [ProtocolLib]
 commands:
   invest:
     description: Help Invest
