--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
 			<url>https://maven.sk89q.com/repo/</url>
 		</repository>
 		<repository>
+			<id>dmulloy2-repo</id>
+			<url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+		</repository>
+		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
@@ -130,6 +134,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- ProtocolLib -->
+		<dependency>
+			<groupId>com.comphenix.protocol</groupId>
+			<artifactId>ProtocolLib-API</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+		
 		<!-- Gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
