--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>me.oddlyoko</groupId>
 	<artifactId>Invest</artifactId>
-	<version>1.6</version>
+	<version>1.7</version>
 	<packaging>jar</packaging>
 
 	<name>Invest</name>
@@ -147,6 +147,7 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
